[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/images/gui/buildings/panel.png" type="Texture" id=1]
[ext_resource path="res://files/scenes/village/Townhall.gd" type="Script" id=2]
[ext_resource path="res://assets/images/gui/buildings/buttonpanel.png" type="Texture" id=3]
[ext_resource path="res://assets/images/gui/buildings/button.png" type="Texture" id=4]
[ext_resource path="res://assets/images/gui/buildings/buttonpress.png" type="Texture" id=5]
[ext_resource path="res://assets/images/gui/buildings/buttonhl.png" type="Texture" id=6]
[ext_resource path="res://assets/images/bg/hall.png" type="Texture" id=7]
[ext_resource path="res://assets/images/sprite/rose.png" type="Texture" id=8]
[ext_resource path="res://assets/images/gui/taskmenu/workerpanel.png" type="Texture" id=9]
[ext_resource path="res://assets/images/gui/UpgradeBorder.png" type="Texture" id=10]
[ext_resource path="res://assets/images/buildings/upgrade_bridge.png" type="Texture" id=11]
[ext_resource path="res://assets/images/gui/inventory/itemicon1.png" type="Texture" id=12]
[ext_resource path="res://assets/images/iconsitems/Wood.png" type="Texture" id=13]
[ext_resource path="res://assets/images/portrait/EmberNormal.png" type="Texture" id=14]
[ext_resource path="res://files/scenes/unused/Questlog.tscn" type="PackedScene" id=15]
[ext_resource path="res://files/scenes/village/SceneUnlockPanel.tscn" type="PackedScene" id=16]
[ext_resource path="res://files/scenes/Outlined_Sprite.gd" type="Script" id=17]
[ext_resource path="res://assets/images/gui/buildings/panel_dialogue.png" type="Texture" id=18]
[ext_resource path="res://assets/fonts/mainfont_32.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/themes/button_small.tres" type="Theme" id=20]
[ext_resource path="res://assets/images/iconsitems/gold.png" type="Texture" id=21]
[ext_resource path="res://assets/fonts/mainfont_bold_36.tres" type="DynamicFont" id=22]
[ext_resource path="res://files/Close Panel Button/CloseButton.tscn" type="PackedScene" id=23]
[ext_resource path="res://files/scenes/village/pending_scenes/PendingScenesUpdater.gd" type="Script" id=24]

[node name="TownHall" type="TextureRect"]
margin_left = 35.0
margin_top = 54.0
margin_right = 1826.0
margin_bottom = 984.0
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ButtonPanel" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 23.0
margin_right = 542.0
margin_bottom = 689.0
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="ButtonPanel"]
margin_left = 78.0
margin_top = 159.0
margin_right = 336.0
margin_bottom = 183.0
text = "TOWNHALL"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonPanel"]
margin_left = 70.0
margin_top = 250.0
margin_right = 363.0
margin_bottom = 329.0

[node name="Tasks" type="TextureButton" parent="ButtonPanel/VBoxContainer"]
visible = false
margin_right = 293.0
margin_bottom = 79.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ButtonPanel/VBoxContainer/Tasks"]
margin_left = 44.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 50.0
text = "TASKS"
align = 1
valign = 1

[node name="Upgrades" type="TextureButton" parent="ButtonPanel/VBoxContainer"]
margin_right = 293.0
margin_bottom = 79.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ButtonPanel/VBoxContainer/Upgrades"]
margin_left = 44.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 50.0
text = "UPGRADES"
align = 1
valign = 1

[node name="Scenes" type="TextureButton" parent="ButtonPanel/VBoxContainer"]
margin_top = 83.0
margin_right = 293.0
margin_bottom = 162.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ButtonPanel/VBoxContainer/Scenes"]
margin_left = 44.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 44.0
text = "SCENES"
align = 1
valign = 1

[node name="Quests" type="TextureButton" parent="ButtonPanel/VBoxContainer"]
visible = false
margin_top = 166.0
margin_right = 293.0
margin_bottom = 245.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Label" type="Label" parent="ButtonPanel/VBoxContainer/Quests"]
margin_left = 44.0
margin_top = 20.0
margin_right = 245.0
margin_bottom = 50.0
text = "QUESTLOG"
align = 1
valign = 1

[node name="BG" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = 18.0
margin_top = 5.0
margin_right = 1769.0
margin_bottom = 915.0
mouse_filter = 2
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="Sprite" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
margin_left = 1022.0
margin_top = -51.0
margin_right = 1770.0
margin_bottom = 926.0
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpcomingEvents" type="NinePatchRect" parent="."]
margin_left = 1077.64
margin_top = 669.735
margin_right = 1738.64
margin_bottom = 901.735
texture = ExtResource( 18 )
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 92
patch_margin_bottom = 44

[node name="ScrollContainer" type="ScrollContainer" parent="UpcomingEvents"]
margin_left = 34.0
margin_top = 14.0
margin_right = 625.0
margin_bottom = 214.0
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="UpcomingEvents/ScrollContainer"]
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="portrait" type="TextureButton" parent="UpcomingEvents/ScrollContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5
script = ExtResource( 17 )

[node name="CloseButton" parent="." instance=ExtResource( 23 )]
margin_left = 1728.0
margin_top = 5.0
margin_right = 1777.0
margin_bottom = 54.0

[node name="UpgradeList" type="TextureRect" parent="."]
visible = false
margin_left = 282.0
margin_top = 70.0
margin_right = 931.0
margin_bottom = 858.0
texture = ExtResource( 9 )

[node name="back_screen" type="Control" parent="UpgradeList"]
show_behind_parent = true
margin_left = -283.0
margin_top = -11.0
margin_right = 1503.0
margin_bottom = 862.0

[node name="ScrollContainer" type="ScrollContainer" parent="UpgradeList"]
margin_left = 47.0
margin_top = 100.0
margin_right = 604.0
margin_bottom = 721.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeList/ScrollContainer"]
margin_right = 557.0
margin_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Button" type="TextureButton" parent="UpgradeList/ScrollContainer/VBoxContainer"]
margin_right = 557.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 40 )
texture_normal = ExtResource( 10 )

[node name="name" type="Label" parent="UpgradeList/ScrollContainer/VBoxContainer/Button"]
margin_left = 313.0
margin_top = 87.0
margin_right = 547.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 19 )
text = "Name"
align = 1
autowrap = true

[node name="icon" type="TextureRect" parent="UpgradeList/ScrollContainer/VBoxContainer/Button"]
show_behind_parent = true
margin_right = 300.0
margin_bottom = 200.0
texture = ExtResource( 11 )
expand = true

[node name="UpgradeDescript" type="TextureRect" parent="UpgradeList"]
visible = false
margin_left = 650.0
margin_right = 1299.0
margin_bottom = 788.0
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="UpgradeList/UpgradeDescript"]
margin_left = 205.0
margin_top = 101.0
margin_right = 425.0
margin_bottom = 125.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
align = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UpgradeList/UpgradeDescript"]
margin_left = 52.0
margin_top = 173.0
margin_right = 594.0
margin_bottom = 530.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Descript"

[node name="UnlockButton" type="Button" parent="UpgradeList/UpgradeDescript"]
margin_left = 242.0
margin_top = 685.0
margin_right = 420.0
margin_bottom = 738.0
theme = ExtResource( 20 )
text = "UP_UNLOCK"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="UpgradeList/UpgradeDescript"]
margin_left = 68.0
margin_top = 573.0
margin_right = 587.0
margin_bottom = 655.0
custom_constants/separation = 14

[node name="Button" type="TextureRect" parent="UpgradeList/UpgradeDescript/HBoxContainer"]
visible = false
margin_right = 80.0
margin_bottom = 82.0
texture = ExtResource( 12 )
stretch_mode = 6

[node name="icon" type="TextureRect" parent="UpgradeList/UpgradeDescript/HBoxContainer/Button"]
show_behind_parent = true
margin_left = 4.0
margin_top = 4.0
margin_right = 76.0
margin_bottom = 76.0
mouse_filter = 2
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="UpgradeList/UpgradeDescript/HBoxContainer/Button"]
margin_left = -8.0
margin_top = 84.0
margin_right = 91.0
margin_bottom = 108.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "150/100"
align = 1
valign = 1
autowrap = true

[node name="goldicon" type="TextureRect" parent="UpgradeList/UpgradeDescript"]
margin_left = 28.0
margin_top = 673.0
margin_right = 100.0
margin_bottom = 743.0
hint_tooltip = "MONEYDESCRIPT"
texture = ExtResource( 21 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="UpgradeList/UpgradeDescript/goldicon"]
margin_left = 67.0
margin_top = 24.0
margin_right = 145.0
margin_bottom = 60.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 22 )
text = "Gold"

[node name="CloseButton" parent="UpgradeList/UpgradeDescript" instance=ExtResource( 23 )]
margin_left = 586.0
margin_top = 6.0
margin_right = 635.0
margin_bottom = 55.0

[node name="Questlog" parent="." instance=ExtResource( 15 )]
visible = false
margin_left = 588.0
margin_top = 72.0
margin_right = 1445.0
margin_bottom = 782.0

[node name="scenes" parent="." instance=ExtResource( 16 )]
visible = false
margin_left = -35.0
margin_top = -54.0
margin_right = 94.0
margin_bottom = 96.0

[node name="PendingScenesUpdater" type="Node" parent="."]
script = ExtResource( 24 )
